tests/paczka1/fuzzy1/81150350.err
Error in line 21: qxni A480 45,1
Error in line 23: zBejHp A656 87,3
Error in line 20: LFTEu6v8 A578 64,9
